/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package protos;

message ChaincodeTransactionHeaderExtension {

	bytes payloadVisibility = 1;

	bytes chaincodeID = 2;
}

message ChaincodeProposalPayload {
	ChaincodeProposalInputs inputs  = 1;
	ChaincodeProposalSimulation simulation = 2;
}

message ChaincodeProposalInputs {
	bytes Input  = 1;

	bytes Transient = 2;
}

message ChaincodeProposalSimulation {
	bytes simulationResults = 1;

	bytes events = 2;
}

